# rater-pandas

./: .gitignore  README.md
rater-pandas/: pyproject.toml  setup.py
rater-pandas/rater_pandas/: __init__.py  agreement.py  icc.py  kappa.py
rater-pandas/tests/: test_icc.py  test_kappa.py
